--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,14 +60,14 @@ body {
 }
 .menu-section {
     background-color: #f7f7f7;
-    border-bottom:5px solid #70a2e4 !important;
+    border-bottom:5px solid transparent !important;
     width:100%
 }
 .menu-top-active {
-    background-color:red;
+    background-color:#eeeeee;
 }
 .navbar-inverse {
-background-color: red !important;
+background-color: #FFF;
 border-color: rgba(155, 153, 153, 0.23);
 
 }
@@ -101,7 +101,7 @@ height: 60px;
 }
 
 .slide-bdr {
-   border:5px solid #9170E4
+   border:5px solid transparent !important;
 }
 .chat-widget-left:after {
     top: 100%;
@@ -211,7 +211,7 @@ height: 60px;
     font-size:13px;
       background-color: #f7f7f7;
       text-align:right;
-       border-top:5px solid red !important;
+       
 
 }
 
