--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,7 +211,8 @@ height: 60px;
     font-size:13px;
       background-color: #f7f7f7;
       text-align:right;
-       
+    bottom: 0;
+    position: fixed;
 
 }
 
